[gd_scene load_steps=18 format=3 uid="uid://i1nir8yc1d0l"]

[ext_resource type="Script" uid="uid://bsprksbo556u1" path="res://scripts/LoadingScreen.gd" id="1_jqyhx"]
[ext_resource type="PackedScene" uid="uid://gimp1gl0ji4b" path="res://scenes/rain_scene.tscn" id="2_3gg4b"]
[ext_resource type="Texture2D" uid="uid://7antrnlsvpmc" path="res://assets/ui/LOADING_SCREEN_CAT_RAINY.png" id="2_814mh"]
[ext_resource type="FontFile" uid="uid://bmbupgmrbwkn2" path="res://assets/fonts/OMORI_GAME2.ttf" id="2_ij0l4"]
[ext_resource type="Texture2D" uid="uid://ddxe05tre21qx" path="res://assets/ui/Skye.png" id="3_814mh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3gg4b"]
atlas = ExtResource("2_814mh")
region = Rect2(0, 0, 100, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_eljrs"]
atlas = ExtResource("2_814mh")
region = Rect2(100, 0, 100, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef7dr"]
atlas = ExtResource("2_814mh")
region = Rect2(200, 0, 100, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_l04bg"]
atlas = ExtResource("2_814mh")
region = Rect2(300, 0, 100, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_24gww"]
atlas = ExtResource("2_814mh")
region = Rect2(400, 0, 100, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_o0603"]
atlas = ExtResource("2_814mh")
region = Rect2(500, 0, 100, 118)

[sub_resource type="AtlasTexture" id="AtlasTexture_pp3ty"]
atlas = ExtResource("2_814mh")
region = Rect2(600, 0, 100, 118)

[sub_resource type="SpriteFrames" id="SpriteFrames_27b2i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gg4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eljrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef7dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l04bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24gww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o0603")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pp3ty")
}],
"loop": true,
"name": &"loading",
"speed": 4.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_27b2i"]
atlas = ExtResource("3_814mh")
region = Rect2(0, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwlml"]
atlas = ExtResource("3_814mh")
region = Rect2(180, 0, 180, 180)

[sub_resource type="AtlasTexture" id="AtlasTexture_tei2c"]
atlas = ExtResource("3_814mh")
region = Rect2(360, 0, 180, 180)

[sub_resource type="SpriteFrames" id="SpriteFrames_amhhn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_27b2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwlml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tei2c")
}],
"loop": true,
"name": &"animated_icon",
"speed": 5.0
}]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jqyhx")

[node name="GPUParticles2D" parent="." instance=ExtResource("2_3gg4b")]
z_index = 15
position = Vector2(313, 5)
amount = 250
texture = null

[node name="BlackOverlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="LOADING_IMAGE" type="AnimatedSprite2D" parent="BlackOverlay"]
position = Vector2(328, 158)
scale = Vector2(2.64, 2.50847)
sprite_frames = SubResource("SpriteFrames_27b2i")
animation = &"loading"
autoplay = "loading"
frame_progress = 0.565848

[node name="LoadingContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -190.0
offset_top = -90.0
offset_right = 190.0
offset_bottom = 90.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="LoadingContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.5
offset_top = -66.5
offset_right = 74.5
offset_bottom = 66.5
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="LoadingContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="LoadingIcon" type="AnimatedSprite2D" parent="LoadingContainer/MarginContainer/HBoxContainer"]
position = Vector2(-27.5, 20.5)
scale = Vector2(0.301389, 0.279167)
sprite_frames = SubResource("SpriteFrames_amhhn")
animation = &"animated_icon"
autoplay = "animated_icon"
frame_progress = 0.961693

[node name="LoadingLabel" type="Label" parent="LoadingContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ij0l4")
theme_override_font_sizes/font_size = 40
text = "LOADING..."
horizontal_alignment = 2
vertical_alignment = 1
